修正 - コース条件が実際に指定されたかを判定するフラグを導入することでコース条件指定ありであり、かつ該当なしのケースに対応 - `courseStartAt`と`courseEndAt`の型をStringからLocalDateに変更 - Stream#toList()の箇所をCollectors.toList()に変更 - 共通メソッドを設けて、空文字もnull相当として扱うように修正